--- a/python.yml
+++ b/python.yml
@@ -1,1 +1,24 @@
+name: Exécuter le script Python
 
+on:
+  schedule:
+    - cron: '0 0 * * *'  # Exécuter tous les jours à minuit
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout du code
+      uses: actions/checkout@v2
+
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    - name: Installer les dépendances
+      run: pip install -r requirements.txt
+
+    - name: Exécuter le script Python
+      run: python app.py
